# plm-interface

./: .gitignore  CMakeLists.txt  LICENSE  config.json  serverConfig.json  tcpstatedriven-main.cpp  tcpstatedriven-v2.cpp
include/: Message.hpp  PlmInterface.hpp  PlmMessage.hpp  PlmRxHandler.hpp  PlmTxHandler.hpp  Serial.hpp
scripts/: setup_virtual_ports.sh
src/: Message.cpp  PlmInterface.cpp  PlmRxHandler.cpp  PlmTxHandler.cpp  Serial.cpp  main.cpp
test/: TestReceiver.cpp  TestSender copy.cpp  TestSender.cpp
